--- a/requirements/prod.in
+++ b/requirements/prod.in
@@ -5,12 +5,11 @@ pyngrok
 requests
 smart_open[s3]
 tqdm
-gantry
-gradio
+# versioned for stability
+gantry==0.4.9
+gradio==3.40.1
 # versioned to match Google Colab up to minor
 Jinja2>=3.1,<3.2
-pillow>=8.4,<8.5
-torch
-torchvision
-# versioned to avoid breaking change in minor version update
-markupsafe
+pillow>=9.4,<9.5
+torch>=2.0,<2.1
+torchvision>=0.15,<0.16
